working model call for classification

--- a/open_ai.ipynb
+++ b/open_ai.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "When dealing with a soil that is a mix of clay and sand, it is important to choose crops that are tolerant of varying soil conditions and can thrive in a well-balanced soil environment. Here are some crops that are suitable for clay and sand mix soil:\n",
+      "Based on the soil properties provided, which indicate a high percentage of gravel and silt but no sand, it can be inferred that the soil is a heavy clay soil. \n",
       "\n",
-      "1. Root vegetables: Carrots, radishes, turnips, parsnips, and beets are well-suited for sandy soil as they can penetrate and grow through the loose texture. However, they also tolerate clay soils.\n",
+      "Clay soils tend to retain water and have poor drainage, making it challenging for some crops to thrive. However, there are several crops that can be grown successfully in clay soil. Here are some options:\n",
       "\n",
-      "2. Legumes: Beans and peas are great for improving clay soils as their roots help break up the compaction while also fixing nitrogen in the soil. They also tend to thrive in sandy soils.\n",
+      "1. Root vegetables: Crops like potatoes, carrots, beets, and radishes tend to thrive in heavy clay soils. They can penetrate the soil easily and grow well in the nutrient-rich clay.\n",
       "\n",
-      "3. Greens and leafy vegetables: Lettuce, spinach, Swiss chard, kale, and cabbage can be grown successfully in sandy or clayey soils.\n",
+      "2. Leafy greens: Vegetables like kale, collard greens, and Swiss chard can tolerate clay soils. They prefer consistent moisture, which clay soils can provide due to their water-holding capacity.\n",
       "\n",
-      "4. Alliums: Onions, garlic, leeks, and shallots are generally tolerant of sandy and clayey soils, and they often thrive in them.\n",
+      "3. Brassicas: Crops like broccoli, cauliflower, and cabbage can grow well in clay soils. These crops are relatively sturdy and can handle the soil's heavy texture.\n",
       "\n",
-      "5. Herbs: Herbs like rosemary, thyme, oregano, and sage can do well in sandy or clay soils as long as they are well-drained.\n",
+      "4. Legumes: Beans and peas, particularly bush beans, can grow in clay soil if provided with proper drainage. Adding organic matter or compost to improve drainage is recommended for legume crops.\n",
       "\n",
-      "It is also recommended to regularly amend the soil with organic matter such as compost or well-rotted manure to improve its structure and fertility. Additionally, maintaining proper irrigation practices is crucial to avoid waterlogging or excessive drying, depending on the soil composition.\n"
+      "While these crops can thrive in clay soils, it's essential to amend the soil by adding organic matter like compost to improve its fertility, structure, and drainage. Regular soil testing and maintaining appropriate nutrient levels will also help achieve optimal crop growth.\n"
      ]
     }
    ],
@@ -60,10 +60,12 @@
     "\n",
     "# Event handler\n",
     "def handle_form_submission():\n",
+    "\n",
+    "    description = \"Percent Gravel: 62.5%, Percent Sand: 0.0%, Percent Silt: 37.5%\"\n",
     "    \n",
     "    try:\n",
     "        # Gets blurb by calling the helper function\n",
-    "        blurb_text = get_blurb(\"clay and sand mix\")\n",
+    "        blurb_text = get_blurb(description)\n",
     "        print(blurb_text)\n",
     "        \n",
     "    except Exception as e:\n",
@@ -72,6 +74,8 @@
     "\n",
     "# Main function\n",
     "def main():\n",
+    "    \n",
+    "\n",
     "    handle_form_submission()\n",
     "\n",
     "# Entry point\n",
