working consolidated file

--- a/soil_crops.ipynb
+++ b/soil_crops.ipynb
@@ -2,20 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.models import load_model\n",
-    "\n",
-    "# returns a compiled model\n",
-    "# identical to the previous one\n",
-    "model = load_model('soil.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# returns a compiled model\n",
+    "# identical to the previous one\n",
+    "model = load_model('soil.h5')\n",
+    "\n",
+    "# Constants\n",
+    "ENDPOINT_COMPLETIONS = \"https://api.openai.com/v1/chat/completions\"\n",
+    "\n",
+    "# Global variables\n",
+    "API_KEY = input(\"Please enter your API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +89,31 @@
     "    first_class = classes[first_idx]\n",
     "    return first_class\n",
     "\n",
+    "# Helper function to get blurb from the chat completions api endpoint\n",
+    "def get_blurb(description):\n",
+    "    # Defines the prompt to send to the API based on title and theme\n",
+    "    prompt = f\"What crops should be planted in soil with the following properties? ${description}\"\n",
+    "    \n",
+    "    # Sends the request to the API\n",
+    "    response = requests.post(\n",
+    "        ENDPOINT_COMPLETIONS,\n",
+    "        json={\n",
+    "            \"model\": \"gpt-3.5-turbo\",\n",
+    "            \"messages\": [{\"role\": \"user\", \"content\": prompt}]\n",
+    "        },\n",
+    "        headers={\n",
+    "            \"Content-type\": \"application/json\",\n",
+    "            \"Authorization\": f\"Bearer {API_KEY}\"\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    # Extracts the data from the response\n",
+    "    data = response.json()\n",
+    "    \n",
+    "    # Returns the blurb by extracting it from the JSON object\n",
+    "    return data[\"choices\"][0][\"message\"][\"content\"]\n",
+    "\n",
+    "\n",
     "def classify_percentage(image_url):\n",
     "    local_image_path = 'image.jpg'  # Path to save the downloaded image\n",
     "    downloaded_image_path = download_image(image_url, local_image_path)\n",
@@ -99,6 +128,16 @@
     "        text_output = f'Percent Gravel: {round(out[0] * 100, 2)}%, Percent Sand: {round(out[1] * 100, 2)}%, Percent Silt: {round(out[2] * 100, 2)}%'\n",
     "        \n",
     "        print(text_output)\n",
+    "\n",
+    "\n",
+    "        try:\n",
+    "            # Gets blurb by calling the helper function\n",
+    "            blurb_text = get_blurb(text_output)\n",
+    "            print(blurb_text)\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            # Prints to console and displays alert if error occurs\n",
+    "            print(\"An error occurred.\")\n",
     "\n",
     "    else:\n",
     "        print(\"Failed to download the image.\")\n",
@@ -116,30 +155,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 128ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
+      "1/1 [==============================] - 0s 94ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
       "1/1 [==============================] - 0s 17ms/step\n",
       "1/1 [==============================] - 0s 16ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
       "1/1 [==============================] - 0s 18ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 34ms/step\n",
-      "Percent Gravel: 0.0%, Percent Sand: 6.25%, Percent Silt: 93.75%\n"
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "Percent Gravel: 0.0%, Percent Sand: 6.25%, Percent Silt: 93.75%\n",
+      "Based on the soil properties provided, which include 6.25% sand and 93.75% silt with 0.0% gravel, it can be concluded that the soil is predominantly composed of silt. \n",
+      "\n",
+      "Silty soil is known to have good water retention capabilities, making it suitable for a variety of crops. Here are some crops that thrive in silty soil:\n",
+      "\n",
+      "1. Leafy vegetables: Spinach, lettuce, kale, Swiss chard, and collard greens are all well-suited to silty soil.\n",
+      "2. Herbs: Basil, parsley, cilantro, and chives can be grown successfully in silty soil.\n",
+      "3. Root vegetables: Radishes, carrots, beets, and turnips generally do well in silty soil.\n",
+      "4. Legumes: Soybeans, lentils, peas, and green beans are compatible with silty soil.\n",
+      "5. Brassicas: Broccoli, cauliflower, cabbage, and Brussels sprouts can be grown in silty soil.\n",
+      "6. Alliums: Onions, garlic, and shallots are suitable for planting in silty soil.\n",
+      "7. Berries: Strawberries, raspberries, and blackberries can thrive in silty soil.\n",
+      "\n",
+      "Remember to consider other factors such as sunlight exposure, drainage, and climate when selecting the specific varieties of these crops to ensure optimal growth.\n"
      ]
     },
     {
